# ai-image-generator

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: desktop-build.yml
docs/: desktop-port-plan.md
packaging/aur/: .SRCINFO  PKGBUILD  README.md
src/: main.tsx  routeTree.gen.ts  router.tsx
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: canonical.rs  config.rs  db.rs  dto.rs  error.rs  ids.rs  legacy_migrate.rs  lib.rs  llm.rs  main.rs  prompt.rs  provider.rs  repo.rs  state.rs  storage.rs
src-tauri/src/commands/: generate.rs  images.rs  misc.rs  mod.rs  styles.rs
src/components/: AGENTS.md  AnchorManager.tsx  ModelPicker.tsx  SaveStyleDialog.tsx  StyleEditor.tsx
src/ipc/: AGENTS.md  analyze.ts  cameras.ts  generate.ts  images.ts  models.ts  settings.ts  styleBrief.ts  styles.ts
src/lib/: AGENTS.md
src/lib/providers/: AGENTS.md
src/routes/: AGENTS.md  __root.tsx  index.tsx  settings.tsx  styles.$id.tsx  styles.index.tsx
