[package]
name = "image-style-studio"
version = "0.1.0"
description = "Reproduzierbare Bildstile für KI-Bildgenerierung — Desktop-App"
authors = ["Marco Michely"]
license = "MIT"
edition = "2021"

[lib]
name = "image_style_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
cuid2 = "0.1"
dotenvy = "0.15"

[profile.release]
codegen-units = 1
lto = true
strip = true
